<resources>
    <string name="app_name">InstaDam</string>
    <string name="chats">Chats</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="publish">Post</string>
    <string name="notify">Notifications</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="username">Username</string>
    <string name="image">Image</string>
    <string name="no_likes">0 Likes</string>
    <string name="description">Description</string>
    <string name="more">More</string>
    <string name="verified">Verified</string>
    <string name="like">Like</string>
    <string name="notification">Notification</string>
    <string name="ago">Ago</string>
    <string name="zero">0</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="follows">Following</string>
    <string name="follow">Follow</string>
    <string name="likes_format">%s Likes</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or_separator">------ or ------</string>
    <string name="email">Email</string>
    <string name="incorrect_credentials">No account found with those credentials</string>
    <string name="username_or_email_yet">That user and/or email are already in use</string>
    <string name="must_complete_fields">You must complete all fields</string>
    <string name="error">Error</string>
    <string name="logout">Logout</string>

    <string-array name="home_toolbar_spinner">
        <item>For You</item>
        <item>Following</item>
        <item>Favorites</item>
    </string-array>
</resources>