<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeItem"
        android:icon="@drawable/house_solid"
        android:title="@string/home" />
    <item
        android:id="@+id/searchItem"
        android:icon="@drawable/magnifying_glass_solid"
        android:title="@string/search" />
    <item
        android:id="@+id/cameraItem"
        android:icon="@drawable/camera_solid"
        android:title="@string/camera" />
    <item
        android:id="@+id/notifyItem"
        android:icon="@drawable/bell_solid"
        android:title="@string/notify" />
    <item
        android:id="@+id/profileItem"
        android:icon="@drawable/user_solid"
        android:title="@string/profile" />
</menu>