<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:src="@drawable/user_solid"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/verified"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/verified"
            android:src="@drawable/circle_check_solid"
            android:visibility="gone" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/more"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/messages"
            android:src="@drawable/ellipsis_solid" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="375dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:src="@drawable/ford_car_stock" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/like"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/like"
            android:src="@drawable/heart_regular" />

        <ImageView
            android:id="@+id/comment"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/messages"
            android:src="@drawable/comment_regular" />

        <ImageView
            android:id="@+id/send"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/messages"
            android:src="@drawable/paper_plane_regular" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/save"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/messages"
            android:src="@drawable/bookmark_regular" />
    </LinearLayout>

    <TextView
        android:id="@+id/likes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/no_likes"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/description" />

</LinearLayout>