<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_margin="20dp"
            android:src="@drawable/user_solid" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followerConut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followsConut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follows"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/followButton"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_margin="10dp"
        android:text="@string/follow"
        app:cornerRadius="10dp"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_posts"
        android:layout_width="match_parent"
        android:layout_height="684dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

</LinearLayout>