<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="10dp"
        android:src="@drawable/user_solid"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/verified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:fontFamily="@font/fa_solid"
        android:text="@string/circle_check"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/notifyContent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/description"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ford_car_stock"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>